1. fixed: only normal state pieces can create block and this reduce many bugs (frozen ones in block, Sick/energized piece inside block, Block contains base/home/home-straight piece)